# tchunk

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/: settings.local.json
docs/superpowers/plans/: 2026-05-01-bookmarks-introspection.md  2026-05-01-depth-as-splitting-primitive.md
docs/superpowers/specs/: 2026-05-01-bookmarks-introspection-design.md  2026-05-01-depth-as-splitting-primitive-design.md
tchunk-pdf/: Cargo.toml  README.md
tchunk-pdf/src/: cli.rs  index.rs  inspect.rs  lib.rs  main.rs  pdf.rs  plan.rs  tokenize.rs
tchunk-pdf/tests/: end_to_end.rs
