[workspace]
resolver = "2"
members = ["tchunk-pdf"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gechelberger/tchunk"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
thiserror = "2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
