[package]
name = "tchunk-pdf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Split PDFs into smaller PDFs at page boundaries under a token budget."

[lib]
path = "src/lib.rs"

[[bin]]
name = "tchunk-pdf"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
lopdf = "0.36"
tiktoken-rs = "0.7"
indexmap = "2"
indicatif = "0.17"
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
